# LibraPoC

./: .gitignore  knowledge_agent.ipynb  ocr_agent.ipynb  poa_agent.ipynb  pyproject.toml  sharepoint_files.ipynb
.github/workflows/: azure-static-web-apps-agreeable-beach-08937bb0f.yml
output/PoA Uruguay/run_20250808_145233/: figure_0.txt  figure_3.txt  figures_index.csv  full_text.txt  page_1.txt  page_2.txt  table_0.csv  table_1.csv  table_2.csv
