[project]
name = "libraAgent"
version = "0.1.0"
description = "descripcion"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.4.9.2",
    "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",
    "azure-ai-documentintelligence>=1.0.0b1",
    "azure-search-documents>=11.6.0b12",
    "bs4>=0.0.2",
    "fuzzywuzzy>=0.18.0",
    "gradio>=5.22.0",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "ipython>=8.0.0",
    "ipykernel>=6.0.0",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "office365-rest-python-client>=2.6.2",
    "playwright>=1.51.0",
    "plotly>=6.0.1",
    "polygon-api-client>=1.14.5",
    "psutil>=7.0.0",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "pymupdf>=1.23.22",
    "python-dotenv>=1.0.1",
    "python-docx>=0.8.11",
    "python-Levenshtein>=0.12.2",
    "requests>=2.32.3",
    "semantic-kernel>=1.25.0",
    "setuptools>=78.1.0",
    "smithery>=0.1.0",
    "speedtest-cli>=2.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]